Fixing visibility issue
- now hiding the screen on landscape on mobile devices

--- a/src/components/Home/MadeWithSection/_madeWithSection.scss
+++ b/src/components/Home/MadeWithSection/_madeWithSection.scss
@@ -174,10 +174,10 @@
 				display: none;
 			}
 
-			//@media screen and (orientation:landscape) {
-			//	visibility: hidden;
-			//	display: none;
-			//}
+			@media screen and (orientation:landscape) {
+				visibility: hidden;
+				display: none;
+			}
 
 			flex: 0 50%;
 			overflow: visible;
